@@ -4,6 +4,9 @@ VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
 
 Version 1.18-17 (opened November 17, 2010)
 
+	* predict.procrustes: gained 'truemean' so that new points can be
+	added to the plot.procrustes() graph.
+
 	* alpha release version: preparing release (1.17-5) of
 	vegan. Mainly clean up and checking of functions intended for the
 	release. 
